[gd_scene load_steps=5 format=3 uid="uid://b8t3jy5w6n8sc"]

[ext_resource type="Script" uid="uid://ck3vlul6pe6nm" path="res://Code/UserInterface/MedicalVendorUI.gd" id="1_v4tug"]
[ext_resource type="Texture2D" uid="uid://r5pgo7pmehec" path="res://Assets/UI/General/close.png" id="2_ve7ph"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4lfhy"]
bg_color = Color(0.141176, 0.141176, 0.176471, 0.901961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.239216, 0.239216, 0.301961, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.196078)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_87mna"]
bg_color = Color(0.196078, 0.196078, 0.235294, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.313726, 0.313726, 0.392157, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="MedicalVendorUI" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v4tug")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -180.0
offset_right = 220.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4lfhy")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HeaderBar" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer/HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Wey-Med Plus"
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer/HeaderBar"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
icon = ExtResource("2_ve7ph")
flat = true
icon_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.717647, 0, 1)
text = "[Supply Link Connected]"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FooterBar" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ReagentLabel" type="Label" parent="PanelContainer/VBoxContainer/FooterBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reagents: 600 / 600"
vertical_alignment = 1

[node name="ReagentBar" type="ProgressBar" parent="PanelContainer/VBoxContainer/FooterBar"]
custom_minimum_size = Vector2(150, 16)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_87mna")
value = 100.0
show_percentage = false
